--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "date-fns": "^2.8.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-waypoint": "^9.0.2"
   },
   "scripts": {
     "publish:npm": "rm -rf dist && mkdir dist &&  babel src/components -d dist --copy-files",
