props passed params working styling done,set for initial release

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-horizontal-datepicker",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "homepage": "https://github.com/kush-agra/react-horizontal-datepicker",
   "repository": {
     "type" : "git",
@@ -9,6 +9,7 @@
   "keywords": [
     "react","date-picker","horizontal-calendar","side-scrolling","calendar-strip"],
   "private": false,
+  "main": "./dist/DatePicker.js",
   "babel": {
     "presets": [
       "@babel/preset-react"
