--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "react-horizontal-datepicker",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "homepage": "https://github.com/kush-agra/react-horizontal-datepicker",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/kush-agra/react-horizontal-datepicker.git"
+    "type": "git",
+    "url": "https://github.com/kush-agra/react-horizontal-datepicker.git"
   },
   "keywords": [
-    "react","date-picker","horizontal-calendar","side-scrolling","calendar-strip"],
+    "react",
+    "date-picker",
+    "horizontal-calendar",
+    "side-scrolling",
+    "calendar-strip"
+  ],
   "private": false,
   "main": "./dist/DatePicker.js",
   "babel": {
@@ -16,9 +21,6 @@
     ]
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "date-fns": "^2.8.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
