--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-horizontal-datepicker",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "homepage": "https://github.com/kush-agra/react-horizontal-datepicker",
   "repository": {
     "type": "git",
@@ -11,7 +11,8 @@
     "date-picker",
     "horizontal-calendar",
     "side-scrolling",
-    "calendar-strip"
+    "calendar-strip",
+    "web"
   ],
   "private": false,
   "main": "./dist/DatePicker.js",
