--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-horizontal-datepicker",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "homepage": "https://github.com/kush-agra/react-horizontal-datepicker",
   "repository": {
     "type": "git",
@@ -16,6 +16,8 @@
   ],
   "private": false,
   "main": "./dist/DatePicker.js",
+  "license": "MIT",
+  "author": "Kushagra Agrawal",
   "babel": {
     "presets": [
       "@babel/preset-react"
