Bug fixes for global function

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "web"
   ],
   "private": false,
-  "main": "./dist/DatePicker.js",
+  "main": "./dist/components/DatePicker.js",
   "license": "MIT",
   "author": "Kushagra Agrawal",
   "babel": {
@@ -33,7 +33,7 @@
     "react-scripts": "^4.0.3"
   },
   "scripts": {
-    "publish:npm": "rm -rf dist && mkdir dist && babel src/components -d dist --copy-files",
+    "publish:npm": "rm -rf dist && mkdir dist && mkdir dist/components && mkdir dist/global && babel src/components -d dist/components --copy-files && babel src/global -d dist/global --copy-files",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
